add s3 configuration + remove warning

--- a/src/Common.Umbraco.StorageProviders.S3.TestSite/appsettings.json
+++ b/src/Common.Umbraco.StorageProviders.S3.TestSite/appsettings.json
@@ -35,8 +35,8 @@
           "BucketName": "bucket1",
           "Region": "us-easy-1",
           "ServiceURL": "http://localhost:9000",
-          "AccessKey": "zx3SOJrDZmP3vUOV3dnp",
-          "SecretKey": "nBxQAQhKv7m5n5Xcep6uIIunV9yp91hOtopNbmp7"
+          "AccessKey": "5HLj2VxBYQwmtKJSdRVU",
+          "SecretKey": "iisRTmuVvUDmYSYoobWkaQPHteKPQzAG08DTXJwm"
         }
       }
     }
